@@ -46,6 +46,8 @@ namespace OpenRCT2
 
 namespace OpenRCT2::Scripting
 {
+    static constexpr int32_t OPENRCT2_PLUGIN_API_VERSION = 27;
+
 #    ifndef DISABLE_NETWORK
     class ScSocketBase;
 #    endif
